--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "vuedraggable": "^4.1.0"
   },
   "devDependencies": {
+    "@rollup/plugin-image": "^3.0.3",
     "@vitejs/plugin-vue": "^4.0.0",
     "eslint": "^8.22.0",
     "eslint-plugin-vue": "^9.3.0",
